# Yolov11-food-classification

./: .gitignore  README.md  final_report.md  pyproject.toml
runs/detect/train/: args.yaml  results.csv
runs/detect/train15/: args.yaml  results.csv
runs/detect/tune/: best_hyperparameters.yaml  tune_results.csv
src/: main.py  video_inference.py
src/preprocessing/: class_label_cleaner.py  filter_annotated_frames.py  frame_extractor.py  train_test_val_split.py
src/preprocessing/food_dataset/: classes.txt  dataset.yaml  notes.json
src/preprocessing/food_dataset/labels/test/: frame_000006.txt  frame_000048.txt  frame_000076.txt  frame_000113.txt  frame_000147.txt  frame_000200.txt  frame_000217.txt  frame_000258.txt  frame_000269.txt  frame_000296.txt
src/preprocessing/food_dataset/labels/train/: frame_000000.txt  frame_000004.txt  frame_000005.txt  frame_000016.txt  frame_000022.txt  frame_000049.txt  frame_000050.txt  frame_000051.txt  frame_000058.txt  frame_000059.txt  frame_000062.txt  frame_000063.txt  frame_000066.txt  frame_000074.txt  frame_000082.txt  frame_000083.txt  frame_000100.txt  frame_000106.txt  frame_000157.txt  frame_000204.txt  frame_000213.txt  frame_000215.txt  frame_000221.txt  frame_000242.txt  frame_000265.txt  frame_000272.txt  frame_000275.txt  frame_000303.txt  frame_000305.txt  frame_000319.txt
src/preprocessing/food_dataset/labels/val/: frame_000015.txt  frame_000018.txt  frame_000056.txt  frame_000267.txt
src/training/: train_yolo11.py  train_yolov11.py
